cabal-version:  2.2
build-type:     Simple

name:           machinecomplexity
version:        0.1.0.0
--description:    Please see the README on GitHub at <https://github.com/wardwheeler/PhyloAlgInfo#readme>
--homepage:       https://github.com/wardwheeler/PhyloAlgInfo#readme
--bug-reports:    https://github.com/wardwheeler/PhyloAlgInfo/issues
--author:         Ward Wheeler
--maintainer:     wheeler@amnh.org
--copyright:      2018-2020 Ward Wheeler
--license:        BSD3
--license-file:   LICENSE

executable machineComplexity

  main-is: machineComplexity.hs

  ghc-options:  -Wall
                -Wincomplete-patterns
                -threaded 
                -O2
                -XBangPatterns
                -fwrite-ide-info

  build-depends:  base >=4.7 && <5
                , containers >=0.6
                , fingertree
                , process
                , parallel
                , deepseq
                , hmatrix
                , MissingH
                

  default-language: Haskell2010

  other-modules:  Data.Compression.Huffman
                  Complexity.Utilities
                  Complexity.MatrixUtilities
                  Complexity.MathUtilities
                  Complexity.Graphs
                  Complexity.CharacterModels
                  Complexity.Parsers
                  Complexity.CodeStrings
                  Complexity.Constants
                  Complexity.Types
                  Complexity.GTRExt
                  Complexity.IntegratedModels

