cabal-version:  3.8
Name:           phyloComplexity
Version:        0.1.0
Stability:      Alpha
Build-Type:     Simple
Tested-With:
  GHC == 9.8.1

Author:        Ward Wheeler <wheeler@amnh.org>
Copyright:     © 2018 Ward Wheeler and The American Museum of Natural History
License:       BSD-3-Clause
License-File:  doc/LICENSE

Maintainer:    Ward Wheeler <wheeler@amnh.org>
Homepage:      https://github.com/WardWheeler/PhyloComplexity#readme
Bug-Reports:   https://github.com/WardWheeler/PhyloComplexity/issues

executable phyloComplexity

-- This is required as compile option to make static binaries on Linux at least
-- need to haev llvm-(version) tools installed to link properly
-- enable-executable-static -fpic (no idea why but lower case seems to mater on 
-- commandline)--sometimes have to run twice to get link correct

  main-is: phyloComplexity.hs

  ghc-options:  -Wall
                -Wincomplete-patterns
                -threaded 
                -O2
                -- -XBangPatterns
                -- -fwrite-ide-info
                -rtsopts
                "-with-rtsopts=-N -A64m -AL128M -H1024m -n4m"
                -fllvm

  build-depends:  base >= 4.10
                , bytestring
                , containers >=0.6
                , encode-string
                , fingertree
                , process
                , parallel
                , deepseq
                , hmatrix
                , MissingH
                , fgl
                , text
                , parallel
                , split
                , vector
                , zlib
                

  default-language: Haskell2010

  other-modules:  Data.Compression.Huffman
                  Complexity.Utilities
                  Complexity.MatrixUtilities
                  Complexity.MathUtilities
                  Complexity.Graphs
                  Complexity.CharacterModels
                  Complexity.Parsers
                  Complexity.CodeStrings
                  Complexity.Constants
                  Complexity.Types
                  Complexity.GTRExt
                  Complexity.IntegratedModels
                  Complexity.PhyloParsers

